lintian-brush (0.26) UNRELEASED; urgency=medium

  * quilt-series-but-no-build-dep: only add quilt dependnecy if one does
    not yet exist.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 25 Aug 2019 13:10:32 +0000

lintian-brush (0.25) unstable; urgency=medium

  * Support pear 2.1 packages.
  * Support labels in the URLS field in DESCRIPTION files.
  * Improve guessing of repository URLs from GitLab URLs.
  * Use fake times for GPG operations, to make the testsuite runs
    reproducible.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 24 Aug 2019 14:24:56 +0000

lintian-brush (0.24) unstable; urgency=medium

  * Add fixer for quilt-series-but-no-build-dep.
  * Add fixer for unused-build-dependency-on-cdbs.
  * Add fixer for debian-rules-uses-unnecessary-dh-argument.
  * Rather than setting Name/Contact fields in debian/upstream/metadata,
    set them in debian/copyright.
  * Remove obsolete Name/Contacts fields from debian/upstream/metadata,
    at least for now. See https://lists.debian.org/debian-
    devel/2019/08/msg00408.html for background.
  * Ignore empty variables when parsing configure file.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 22 Aug 2019 19:50:48 +0000

lintian-brush (0.23) unstable; urgency=medium

  * In debian-source-options-has-custom-compression-settings.py, don't
    crash on options that are not key/value.
  * Add fixer for comma-separated-files-in-dep5-copyright.
  * Disable strict parsing of copyright file.
  * Support reading upstream metadata from configure.
  * Add fixer for libmodule-build-perl-needs-to-be-in-build-depend.
  * Add fixer for space-in-std-shortname-in-dep5-copyright.
  * Add support for reading R DESCRIPTION files.
  * Add fixer for no-homepage-field.
  * Add fixer for debian-tests-empty-control.
  * Add fixer for homepage-in-binary-package.
  * Fix Git URLs with the branch name in the URL rather than with -b
    argument.
  * Add fixer for maintainer-also-in-uploaders.
  * Ignore comments in debian/source/options.
